# lingua-recall

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  dev
.github/workflows/: build.yml
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: ConfigGeneral.qml  RecallHelperQml.qml  TtsConfigCategory.qml  main.qml
package/contents/ui/services/: EdgeTtsService.qml
package/translate/: .gitkeep
src/: .gitkeep  FsrsEngine.cpp  FsrsEngine.h  RecallHelper.cpp  RecallHelper.h  ReviewDb.cpp  ReviewDb.h
tests/: .gitkeep  tst_FsrsEngine.cpp  tst_RecallHelper.qml  tst_ReviewDb.cpp
